--- a/package.json
+++ b/package.json
@@ -2,5 +2,11 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "jest": "^22.4.3"
+  },
+  "scripts": {
+    "test": "jest"
+  },
+  "dependencies": {
+    "babel-preset-env": "^1.6.1"
   }
 }
